# auction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: fig_best_response.py  fig_curse.py  fig_pnl.py  fig_revenue.py  fig_ruin.py  fig_shading.py  run_all.py  style.py
src/auction/: __init__.py  bayes.py  bots.py  campaign.py  engine.py  english.py  vectorized.py
tests/: test_bayes.py  test_bots.py  test_campaign.py  test_engine.py  test_english.py  test_equilibrium.py  test_vectorized.py  test_web.py  test_web_english.py
web/: app.py
web/static/: app.js  english.html  english.js  index.html  style.css
